Test case fixes and few changes. (#149)